[tool.poetry]
name = "utility-bot"
version = "0.1.0"
description = ""
authors = ["Bulat Kurbanov <kurbanovbul@gmail.com>"]
readme = "README.md"
packages = [{include = "utility_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
tiktok-downloader = "^0.3.5"
aiogram = "^3.11.0"
aiohttp = "^3.10.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
